syntax = "proto3";
package protomessage;

enum MessageType {
    kCreateNicknameRequest = 0;
    kCreateNicknameResponse = 1;
    kCreateRoomRequest = 2;
    kCreateRoomResponse = 3;
    kJoinRoomRequest = 4;
    kJoinRoomResponse = 5;
    kSendMessageRequest = 6;
    kSendMessageResponse = 7;

    kCreateRoomNotify = 101;
    kCreateJoinRoomNotify = 102;
    kSendMessageNotify = 103;
};

message CreateNicknameRequest {
    MessageType messageType = 1;
    string name = 2;
}

message CreateNicknameResponse {
    MessageType messageType = 1;
    uint32 userId = 2;
    string name = 3;
}

message CreateRoomRequest {
    MessageType messageType = 1;
    uint32 roomId = 2;
    string name = 3;
}

message CreateRoomResponse {
    MessageType messageType = 1;
    uint32 roomId = 2;
    string name = 3;
}

message JoinRoomRequest {
    MessageType messageType = 1;
    uint32 roomId = 2;
    uint32 userId = 3;
    string name = 4;
}

message JoinRoomResponse {
    MessageType messageType = 1;
    uint32 roomId = 2;
    string name = 3;
    bool isSuccess = 4;
}

message SendMessageRequest{
    MessageType messageType = 1;
    string name = 2;
    string message = 3;
}

message SendMessageNotify{
    MessageType messageType = 1;
    string name = 2;
    string message = 3;
}
